# ModernTeleport-MCDR

./: .gitignore  README.md  README_cn.md  clone_dep_repos.sh  mcdreforged.plugin.json  pack.sh  pyproject.toml  pyrightconfig.json  requirements.txt
lang/: en_us.yml  zh_cn.yml
modern_teleport/: runtime.py  utils.py
modern_teleport/mcdr/: __init__.py  commands.py  config.py
modern_teleport/mcdr/commands/: __init__.py  functions.py  utils.py
modern_teleport/modules/: __init__.py  back.py  home.py  rcon.py  storage.py  tpmanager.py  tpmanager_async.py  warp.py
modern_teleport/utils/: __init__.py  execute_if.py  general_tools.py
