[project]
name = "modernteleport-mcdr"
version = "0.0.1"
description = "A modern teleport plugin with rich functional design for Minecraft servers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beartype>=0.20.0",    # needed by necessary dep "location_api"
  "mcdreforged>=2.14.1",
]
